# treesampler

./: LICENSE  Makefile  README.md  pyproject.toml
results/: codegen_350m_mono_with_treesampler_beams=2.jsonl  codegen_350m_mono_with_treesampler_beams=2.jsonl_results.jsonl  codegen_350m_mono_with_treesampler_beams=4.jsonl  codegen_350m_mono_with_treesampler_beams=4.jsonl_results.jsonl  codegen_350m_mono_without_treesampler_beams=2.jsonl  codegen_350m_mono_without_treesampler_beams=2.jsonl_results.jsonl  codegen_350m_mono_without_treesampler_beams=4.jsonl  codegen_350m_mono_without_treesampler_beams=4.jsonl_results.jsonl  codegen_350m_nl_with_treesampler_beams=2.jsonl  codegen_350m_nl_with_treesampler_beams=2.jsonl_results.jsonl  codegen_350m_nl_without_treesampler_beams=2.jsonl  codegen_350m_nl_without_treesampler_beams=2.jsonl_results.jsonl
scripts/: generate.py
tests/: test_py.py
treesampler/: __init__.py  client.py  processor.py  provider.py  scorer.py
