[tool.poetry]
name = "treesampler"
version = "0.1.0"
description = ""
authors = ["Nuno Campos <nuno@boringbits.io>"]
readme = "README.md"
packages = [{include = "treesampler"}]

[tool.poetry.dependencies]
python = "^3.10"
pylspclient = {git = "https://github.com/yeger00/pylspclient.git"}



[tool.poetry.group.dev.dependencies]
transformers = "^4.26.1"
pytest = "^7.1.3"
pytest-watch = "^4.2.0"



[tool.poetry.group.py.dependencies]
ruff-lsp = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vv -s"